# Ecommerce-Backend

./: .env.example  .gitignore  README.md  pyproject.toml
ecommerce/: schema.yml
ecommerce/account/: models.py  urls.py
ecommerce/account/api/: urls.py
ecommerce/account/api/_serializers/: address_serializer.py  login_serializer.py
ecommerce/account/api/views/: __init__.py  _base.py  address_manage_api.py  health_api.py  login_api.py  user_address_api.py
ecommerce/account/migrations/: 0001_initial.py  0002_alter_user_options_alter_useraddress_address_type_and_more.py
ecommerce/account/utils/: __init__.py  login_support.py
ecommerce/core/: settings.py  urls.py  wsgi.py
ecommerce/shopping/: admin.py  temp.txt  urls.py
ecommerce/shopping/api/: throttles.py  urls.py
ecommerce/shopping/api/_serializers/: __init__.py  cart_ser.py  order_ser.py  search_product_ser.py
ecommerce/shopping/api/views/: __init__.py  _base.py  cart_api.py  get_product.py  home_products.py  order_api.py  product_like_dislike_api.py  search_products_api.py
ecommerce/shopping/dummy-data/: dummyProduct.csv
ecommerce/shopping/migrations/: 0001_initial.py  0002_userproductreview.py  0003_product_recommendation_cluster.py  0004_order_address_to_deliver.py  0005_remove_order_address_to_deliver_and_more.py
ecommerce/shopping/ml_model/: recom_vectorizer.pkl  recommend_cluster.pkl
ecommerce/shopping/models/: __init__.py  cart.py  orders.py  products.py  user_product_review.py
ecommerce/shopping/utils/: __init__.py  checkout_utils.py  recommendation_utils.py
(+2 files in other folders)
